<resources>
    <string name="app_name">AIDAS_v2</string>
    <string name="gallery_mode">Gallery Mode</string>
    <string name="live_mode">Live Mode</string>
    <string name="select_from_gallery">Select From Gallery</string>
    <string name="image_for_object_detection">Image for object detection</string>
    <string name="live_camera_feed">Live Camera feed</string>
    <string name="plus_btn">+</string>
    <string name="threshold_txt_default">0.50</string>
    <string name="minus_btn">-</string>
    <string name="threshold">Threshold</string>

    <string-array name="models">
        <item>Traffic Sign V1</item>
        <item>Traffic Sign V2 (MobileNet V2, AP:0.2476)</item>
        <item>Traffic Sign V3 (MobileNet Multi AVG I384, AP:0.379</item>
        <item>Traffic Sign V4 (MobileNet V2 I320, AP:0.343</item>
        <item>Pedestrian V1 (EfficientDet Lite 0)</item>
        <item>Pedestrian V2 (MobileNet V1)</item>
        <item>Pedestrian V3 (SSD MobileNet V1)</item>
    </string-array>
</resources>